[tool.poetry]
name = "project-web-1"
version = "0.1.0"
description = ""
authors = ["Вадим <kantora_70@mail.ru>"]
readme = "README.md"
packages = [{include = "project_web_1"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
